# gha-cd-bagelstore-demo

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  HANDOFF_NEXT_SESSION.md  HANDOFF_PROMPT.md  README.md  SCRIPT_TEST_REPORT.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_INCIDENT_REPORT.md  SETUP.md  TERRAFORM_SSM_MIGRATION_SUMMARY.md  TESTING_CHECKLIST.md  TEST_RESULTS.md  demo-dashboard.html  docker-compose-demo.yml  requirements-design-plan.md
.claude/: settings.local.json
app/: .dockerignore  .env.example  Dockerfile  README.md  TESTING.md  docker-compose.yml  init-db.sql  main.py  pyproject.toml  pytest.ini
app/src/: app.py  database.py  models.py  routes.py
app/src/static/css/: style.css
app/src/templates/: base.html  cart.html  checkout.html  index.html  login.html  order_confirmation.html
app/tests/: conftest.py  test_e2e_shopping.py  test_health_check.py  test_liquibase_deployment.py
docs/: AWS_SETUP.md  COMMANDS.md  HARNESS_API_PLAYBOOK.md  HARNESS_API_WORKFLOWS.md  HARNESS_AUTOCREATION_MIGRATION.md  HARNESS_CUSTOMDEPLOYMENT_GUIDE.md  HARNESS_IMPORT_SUMMARY.md  HARNESS_MANUAL_SETUP.md  HARNESS_PIPELINE_ABORT_INVESTIGATION.md  HARNESS_PIPELINE_FAILURE_DIAGNOSIS_RESEARCH.md  HARNESS_TRIGGER_QUEUED_ISSUE.md  IAM_POLICY_HARNESS_DELEGATE.json  IAM_SETUP_INSTRUCTIONS.md  INFRASTRUCTURE_DEFINITION_RESEARCH.md  LOCAL_DEPLOYMENT.md  PIPELINE_FAILURE_ANALYSIS.md  TROUBLESHOOTING.md  WORKFLOWS.md
harness/: .env.example  Dockerfile.delegate  LOCAL_TESTING.md  README.md  docker-compose.yml
liquibase-flows/: README.md  (+3 more)
scripts/: README.md  (+20 more)
(+90 files in other folders)
